# revs_ai

./: .deploy-config  .gitignore  .pre-commit-config.yaml  BACKGROUND_JOBS.md  Dockerfile  FRONTEND_FEATURES.md  README.md  README_CELERY.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.testing.yml  docker-compose.yml  env.development  env.example  manage.py  package.json  pyproject.toml  pytest.ini  start_celery.sh  stocks_db
.cursor/: rules.md
.github/workflows/: ci.yml
bot_simulations/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
bot_simulations/management/commands/: fix_periodic_tasks.py  run_simulation.py
bot_simulations/migrations/: 0001_initial.py  0002_add_paused_status.py  0003_botsimulationrun_bot_execution_times.py  0004_add_execution_dates.py  0005_add_execution_dates2.py  0006_add_progress_tracking_and_tick_model.py  0007_add_simulation_type_and_initial_state.py
bot_simulations/simulation/: __init__.py  data_splitter.py  day_executor.py  engine.py  parameter_generator.py  signal_analyzer.py  simulation_bot.py  validator.py
bot_simulations/tests/: __init__.py
bot_simulations/tests/fixtures/: __init__.py  factories.py
bot_simulations/tests/integration/: __init__.py  test_base.py  test_day_executor_ticks.py  test_step1_simulation_creation.py  test_step2_bot_generation.py  test_step3_data_splitting.py  test_step4_daily_execution.py  test_step5_result_aggregation.py
config/: asgi.py  celery.py  celery_monitoring.py  celery_urls.py  celery_views.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  staging.py  testing.py
docs/: DEPLOYMENT.md  DEPLOYMENT_NO_DOCKER.md  TRANSFORMER_MODELS.md
docs/screenshots/: .gitkeep  README.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminRoute.tsx  PerplexityBackground.tsx  ProtectedRoute.tsx
frontend/src/components/auth/: ChangePasswordForm.tsx  ForgotPasswordForm.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/components/bots/: AggregationMethodSelector.tsx  (+13 more)
frontend/src/contexts/: AuthContext.tsx  IndicatorThresholdsContext.tsx  NotificationContext.tsx  WatchlistContext.tsx
frontend/src/lib/: api.ts  botConstants.ts
frontend/src/pages/: BotExecutionDetail.tsx  BotSignalHistory.tsx  BotSimulationCreate.tsx  BotSimulationList.tsx  ContactSupport.tsx  Dashboard.tsx  EditBot.tsx  ForgotPassword.tsx  IndicatorDetail.tsx  Indicators.tsx  Login.tsx  PatternDetail.tsx  Patterns.tsx  Portfolio.tsx  Profile.tsx  Register.tsx  Settings.tsx  StockDetail.tsx  Stocks.tsx  TradingBotDetail.tsx  TradingBots.tsx
frontend/src/utils/: chartPatterns.ts  dateUtils.ts  indicatorsConfig.ts  performanceFix.ts  technicalIndicators.ts  test-media-url.ts
monitoring/: prometheus.yml
nginx/: default.conf  nginx.conf  staging.conf
scripts/: backup.sh  check-deployment.sh  deploy-backend.sh  deploy-fast.sh  deploy-production.sh  deploy.sh  dev-local.bat  dev-local.sh  docker-dev.sh  docker-prod.sh  docker-test.sh  init-deploy-config.sh  lint.sh  recover_database.sh  setup-app.sh  setup-nginx.sh  setup-pre-commit.sh  setup-server.sh  setup-services.sh  start-celery.sh  upload-frontend.sh
stocks/: admin.py  apps.py  bot_engine.py  indicator_signals.py  indicators.py  models.py  pattern_detector.py  permissions.py  risk_manager.py  rule_engine.py  serializers.py  services.py  signal_persistence.py  signals.py  tasks.py  test_models_and_api.py  tests.py  urls.py  views.py
stocks/analyzers/: __init__.py  news.py  sentiment.py  social_media.py
stocks/management/commands/: delete_sparse_tick_data.py  delete_stocks_without_data.py  fix_stuck_orders.py  import_csv_data.py  populate_real_stocks.py  setup_periodic_tasks.py  show_stocks_without_data.py  sync_daily_intraday.py  sync_historical_data.py  update_tick_data_batch.py
stocks/migrations/: 0001_initial.py  0002_intradayprice_stocktick_and_more.py  0003_portfolio.py  0004_order_portfolio_order_and_more.py  0005_order_transaction_type_alter_order_order_type_and_more.py  0006_alter_order_status.py  0007_tradingbotconfig_order_bot_config_and_more.py  0008_historicalstock.py  0009_add_ml_models_and_signal_history.py  0010_add_indicator_thresholds.py  0011_tradingbotsettings.py  0012_add_period_days_to_bot_config.py  0013_add_signal_persistence_fields.py  0014_add_bot_portfolio_models.py  0015_initialize_bot_portfolio_data.py  0016_alter_historicalorder_quantity_alter_order_quantity.py  0017_change_portfolio_quantity_to_integer.py
stocks/ml_models/: __init__.py  base.py  registry.py
stocks/ml_models/models/: __init__.py  autoformer_model.py  dummy_model.py  informer_model.py  patchtst_model.py  rsi_model.py  sma_model.py  transformer_base.py  transformer_rl_model.py
stocks/ml_models/rl/: __init__.py  replay_buffer.py  rewards.py  trading_env.py
stocks/signals/: __init__.py  aggregator.py  types.py
stocks/tests/: __init__.py
stocks/tests/fixtures/: __init__.py  factories.py  sample_data.py
stocks/tests/integration/: __init__.py  test_bot_execution_workflow.py  test_bot_multi_signal_execution.py  test_bot_portfolio_management.py  test_celery_tasks.py  test_full_bot_execution_flow.py  test_indicator_signal_aggregation.py  test_multi_signal_scenarios.py  test_order_execution.py
stocks/tests/unit/: test_analyzers.py  test_bot_engine_components.py  test_indicators.py  test_ml_models.py  test_pattern_detector.py  test_risk_manager.py  test_rule_engine.py  test_signal_aggregator.py  test_signal_persistence.py
templates/users/: password_reset_email.txt
users/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_userprofile_cash.py  0003_supportrequest.py  0004_notification.py  0005_historicaluser_historicaluserprofile.py  0006_historicaluser_role_user_role_historicalnotification_and_more.py  0007_alter_historicaluserprofile_cash_and_more.py
(+37 files in other folders)
